--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,23 @@
+.btn-burger{
+	padding: .25rem .75rem;
+	font-size: 1.25rem;
+	line-height: 1;
+	background-color: transparent;
+	border: 1px solid transparent;
+		border-top-color: transparent;
+		border-right-color: transparent;
+		border-bottom-color: transparent;
+		border-left-color: transparent;
+	border-radius: .25rem;
+}
 .navbar{
 	padding: .5rem .5rem;
+}
+.menu .navbar-nav{
+	flex-direction: row;
+}
+.menu .navbar-nav .nav-item {
+	margin: 0 10px 0 10px; 
 }
 .list-group-item-action {
     width: 100%;
